# CRUD-app

./: .env.example  README.md  docker-compose.yml
backend-python/: .env.example  .gitignore  Dockerfile  pyproject.toml  seed.py
backend-python/app/: main.py
backend-python/app/config/: database.py  logger.py  settings.py
backend-python/app/models/: models.py
backend-python/app/routers/: auth.py  tasks.py  users.py
backend-python/app/schemas/: auth.py  task.py  user.py
backend-python/app/utils/: dependencies.py  jwt.py  response.py  sanitize.py
frontend/: Dockerfile
frontend/src/: App.jsx  index.css
frontend/src/api/: api.js
frontend/src/components/: Navbar.jsx  ProtectedRoute.jsx  TaskModal.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Admin.jsx  Dashboard.jsx  Login.jsx  Profile.jsx  Register.jsx
